fix header spacing
- there are some header tag spacing issues described in https://github.com/ember-learn/ember-styleguide/pull/335
- this attempts to remove header header tag specific styling that may be appropriate for the main website, but may not be appropriate for the blog posts

--- a/addon/styles/typography.css
+++ b/addon/styles/typography.css
@@ -100,26 +100,17 @@ h1 {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
   margin-bottom: var(--spacing-1);
 }
 
-.text-xl + *,
-h1 + * {
-  margin-top: var(--spacing-3);
-}
-
-* + .text-xl {
-  margin-top: var(--spacing-6);
-}
-
-* + .text-lg,
-* + h2 {
-  margin-top: var(--spacing-5);
-}
-
-* + .text-md,
-* + h3 {
+* + h1,
+* + h2,
+* + h3,
+* + h4,
+* + h5 {
   margin-top: var(--spacing-3);
 }
 
